Added configurations to appsettings

--- a/Google.BLL/Google.BLL.csproj
+++ b/Google.BLL/Google.BLL.csproj
@@ -11,6 +11,11 @@
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Utils.Constants\Utils.Constants.csproj" />
   </ItemGroup>
 
 </Project>
