--- a/Google.PL/appsettings.json
+++ b/Google.PL/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleConfiguration": {
+    "ServiceAccountKeyPath": "C:\\Users\\polin\\Just_all\\Work\\Ilya\\DocsConverting\\SecurityKey.json",
+    "ApplicationName": "Converter"
+  },
+  "FileConfiguration": {
+    "ContentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
+    "OriginalMimeType": "application/vnd.google-apps.document",
+    "OutputMimeType": "application/pdf"
+  },
   "AllowedHosts": "*"
 }
