--- a/Google.PL/appsettings.json
+++ b/Google.PL/appsettings.json
@@ -5,11 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "GoogleConfiguration": {
+  "GoogleSettings": {
     "ServiceAccountKeyPath": "C:\\Users\\polin\\Just_all\\Work\\Ilya\\DocsConverting\\SecurityKey.json",
     "ApplicationName": "Converter"
   },
-  "FileConfiguration": {
+  "FileSettings": {
     "ContentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
     "OriginalMimeType": "application/vnd.google-apps.document",
     "OutputMimeType": "application/pdf"
