--- a/Google.PL/appsettings.json
+++ b/Google.PL/appsettings.json
@@ -6,13 +6,26 @@
     }
   },
   "GoogleSettings": {
-    "ServiceAccountKeyPath": "C:\\Users\\polin\\Just_all\\Work\\Ilya\\DocsConverting\\SecurityKey.json",
-    "ApplicationName": "Converter"
+    "ApplicationName": "Converter",
+    "SecurityKey": {
+      "type": "***",
+      "project_id": "***",
+      "private_key_id": "***",
+      "private_key": "***",
+      "client_email": "***",
+      "client_id": "***",
+      "auth_uri": "***",
+      "token_uri": "***",
+      "auth_provider_x509_cert_url": "***",
+      "client_x509_cert_url": "***",
+      "universe_domain": "***"
+    }
   },
   "FileSettings": {
     "ContentType": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
     "OriginalMimeType": "application/vnd.google-apps.document",
     "OutputMimeType": "application/pdf"
   },
+
   "AllowedHosts": "*"
 }
